Fixed Scrollbar issues on Mobile

--- a/src/assets/css/simplify.css
+++ b/src/assets/css/simplify.css
@@ -49,18 +49,18 @@ textarea{
     resize: none;
 }
 
-*::-webkit-scrollbar {
-    width: 0.7rem;
-}
-
-*::-webkit-scrollbar-track {
-    box-shadow: 0 5px 15px rgb(0 0 0 / 8%);
-    border-radius: 10px;
+@media screen and (min-width: 768px) {
+    *::-webkit-scrollbar {
+        background-color: transparent;
+        width: .8rem;
+    }
 }
 
 *::-webkit-scrollbar-thumb {
     background: var(--color-primary-200);
-    border-radius: 10px;
+    border: 3px solid transparent;
+    border-radius: 9px;
+    background-clip: content-box;
 }
 
 /* Utility Classes Start */
